follow us changed

--- a/landing-page.html
+++ b/landing-page.html
@@ -295,7 +295,11 @@
 
 			<div class="col-md-4" id="footer-col2">
 			<h3>Follow us </h3>
-
+				<p>manibharathiinreallife@gmail.com</p>
+				<p>velakshman@gmail.com</p>
+				<p>ashikcsbtech@gmail.com</p>
+				<p>Sudhaarshan11@gmail.com</p>
+				<p>sanjayravikumar22@gmail.com</p>
 			</div>
 		</div>
 		</div>
