--- a/finalpage.html
+++ b/finalpage.html
@@ -21,7 +21,7 @@
             
           </div>
         <span class="borderLine"></span>
-        <form id = "uploadForm" action="/upload" method="post" onsubmit="showAlert();  returntoLandingPage()" enctype="multipart/form-data">
+        <form id = "uploadForm" action="/upload" method="post" onsubmit="showAlert(); uploadImage(); returntoLandingPage()" enctype="multipart/form-data">
           <div class="user-details">
             <div class="input-box">
               <label for="resume">Upload Resume (PDF)</label>
